Update to Java 25 StructuredTaskScope.open() API
Changes:
- Reverted from Java 21 to Java 25
- Updated Maven compiler plugin to version 3.13.0 for better Java 25 support
- Changed API from 'new StructuredTaskScope.ShutdownOnFailure()' to 'StructuredTaskScope.open()'
- Updated all comments to reflect Java 25 status
- ScopedValue is FINALIZED in Java 25
- Structured Concurrency is Fifth Preview

Requires Java 25 JDK to build